[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harchos"
version = "0.3.0"
description = "Official Python SDK for HarchOS - The Operating System for Sovereign AI Infrastructure"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "VitalCheffe", email = "amineharchelkorane5@gmail.com" },
]
keywords = ["harchos", "sovereign", "ai", "infrastructure", "sdk", "carbon-aware", "gpu", "green-computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Operating System",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "typer>=0.9.0",
]
pandas = ["pandas>=2.0.0"]

[project.scripts]
harchos = "harchos.cli.main:main"

[project.urls]
Homepage = "https://github.com/HarchCorp/harchos-sdk-python"
Documentation = "https://docs.harchos.ai"
Repository = "https://github.com/HarchCorp/harchos-sdk-python"
Issues = "https://github.com/HarchCorp/harchos-sdk-python/issues"
Changelog = "https://github.com/HarchCorp/harchos-sdk-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/harchos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
